<resources>
    <string name="app_name">Connectavo</string>
    <string name="workorders">Work orders</string>
    <string name="work_orders">Work orders</string>
    <string name="ideas">Ideas</string>
    <string name="select_idea_creator">Select Idea creator</string>
    <string name="filters">Filters</string>
    <string name="request">Request</string>
    <string name="requests">Requests</string>
    <string name="workorder">Workorder</string>
    <string name="new_request">New request</string>
    <string name="enter_request_name">Enter a request name…</string>
    <string name="description">Description</string>
    <string name="enter_description">Enter a brief description</string>
    <string name="enter_description_dot">Enter a brief description…</string>
    <string name="tags">Tags:</string>
    <string name="picture">Picture</string>
    <string name="legal_information"><u>LEGAL INFORMATION</u></string>
    <string name="imprint1" translatable="false">Die App wird betrieben durch die connectavo GmbH. Angaben gemäß § 5 TMG:\n\nconnectavo GmbH\nGreifswalder Str. 33a\n10405 Berlin\n\nWeb: www.connectavo.com\nE-Mail: info@connectavo.com\nTelefon: +49 30 398 209 72\n\nEintragen im Handelsregister: Amtsgericht München, Registernummer HRB 226261\n\nUmsatzsteuer-Identifikationsnummer gemäß §27 a\nUmsatzsteuergesetz:\nDE307018303</string>
    <string name="imprint2" translatable="false">Haftung für Inhalte</string>
    <string name="imprint3" translatable="false">Als Diensteanbieter sind wir gemäß § 7 Abs.1 TMG für eigene Inhalte in dieser App nach den allgemeinen Gesetzen verantwortlich. Nach §§ 8 bis 10 TMG sind wir als Diensteanbieter jedoch nicht verpflichtet, übermittelte oder gespeicherte fremde Informationen zu überwachen oder nach Umständen zu forschen, die auf eine rechtswidrige Tätigkeit hinweisen. Verpflichtungen zur Entfernung oder Sperrung der Nutzung von Informationen nach den allgemeinen Gesetzen bleiben hiervon unberührt. Eine diesbezügliche Haftung ist jedoch erst ab dem Zeitpunkt der Kenntnis einer konkreten Rechtsverletzung möglich. Bei Bekanntwerden von entsprechenden Rechtsverletzungen werden wir diese Inhalte umgehend entfernen.</string>
    <string name="datasecurity1" translatable="false">1. Allgemeines</string>
    <string name="datasecurity2" translatable="false">Ihre personenbezogenen Daten (z.B. Anrede, Name, Anschrift, E-Mail-Adresse, Telefonnummer) werden von uns nur gemäß den Bestimmungen des deutschen Datenschutzrechts und des Datenschutzrechts der Europäischen Union (EU) verarbeitet. Die nachfolgenden Vorschriften informieren Sie neben den Verarbeitungszwecken, Empfängern, Rechtsgrundlagen, Speicherfristen auch über Ihre Rechte und den Verantwortlichen für Ihre Datenverarbeitung. Diese Datenschutzerklärung bezieht sich nur auf unsere Websites. Falls Sie über Links auf unseren Seiten auf andere Seiten weitergeleitet werden, informieren Sie sich bitte dort über den jeweiligen Umgang mit Ihren Daten.</string>
    <string name="datasecurity3" translatable="false">2. Kontaktaufnahme</string>
    <string name="datasecurity4" translatable="false">1) Verarbeitungszweck</string>
    <string name="rationale_doc_picker">We need this pemission to read documents from device.</string>
    <string-array name="employees">
        <item>no internet</item>
    </string-array>
    <string name="new_idea">New Idea</string>
    <string name="new_work_order">New work order</string>
    <string name="workorder_name">Workorder name*</string>
    <string name="enter_workorder_name">Enter work order name…</string>
    <string name="scan_qr" translatable="false">SCAN</string>
    <string name="estimated_hours">Estimated time in hours...</string>
    <string name="priority">Priority</string>
    <string name="documents">Documents</string>
    <string name="attachments">Attachments</string>
    <string name="open">OPEN</string>
    <string name="in_progress">IN-PROGRESS</string>
    <string name="done">DONE</string>
    <string name="workorder_id">Work order ID:</string>
    <string name="team" translatable="false">Team:</string>
    <string name="duedate">Due date*</string>
    <string name="due_date">Due date:</string>
    <string name="due_time_star">Due time*</string>
    <string name="due_date_dialog">Due date</string>
    <string name="show_more">SHOW MORE</string>
    <string name="estimated">Estimated:</string>
    <string name="estimated_time">Estimated time</string>
    <string name="show_less">SHOW LESS</string>
    <string name="comment_colon">Comment:</string>
    <string name="draw_your_signature">Draw signature to complete workorder</string>
    <string name="undo">Undo</string>
    <string name="login">Login</string>
    <string name="new_version_is_available_click_here">New Version is available. Click here</string>
    <string name="workspace">Workspace:</string>
    <string name="logout">LOGOUT</string>
    <string name="upload">UPLOAD</string>
    <string name="name">Name</string>
    <string name="date_created">Date created</string>
    <string name="name_star">Name*</string>
    <string name="enter_your_name">Enter your name…</string>
    <string name="enter_your_number">Enter your phone number…</string>
    <string name="phone">Phone</string>
    <string name="smart_maintenance_made_easy">Smart maintenance made easy</string>
    <string name="checklist">Checklist:</string>
    <string name="protocol">Protocol</string>
    <string name="end_time">End time:</string>
    <string name="signature">Signature:</string>
    <string name="login_to_your_workspace">Login to your workspace</string>
    <string name="workspace_name">Enter your company space…</string>
    <string name="continue_button">CONTINUE</string>
    <string name="learn_more">LEARN MORE</string>
    <string name="do_you_want_to_enable_biometric_authentication">Do you want to enable Biometric Authentication?</string>
    <string name="edit_profile">Edit profile</string>
    <string name="number_is_empty">Number is empty!</string>
    <string name="name_is_empty">Name is empty!</string>
    <string name="select_asset">Select Asset</string>
    <string name="scan_and_select_asset">Scan and select asset</string>
    <string name="select_tags">Select Tags</string>
    <string name="complete_workorder">Complete work order</string>
    <string name="end_date_is_empty">End date is empty</string>
    <string name="draw_signature">Draw Signature</string>
    <string name="please_type_workspace_name">Please type workspace name</string>
    <string name="minimum_2_characters">Minimum 2 characters</string>
    <string name="imprint">IMPRINT</string>
    <string name="data_security">DATA SECURITY</string>
    <string name="end_date">End date*</string>
    <string name="edit">EDIT</string>
    <string name="save">SAVE</string>
    <string name="profile">Profile</string>
    <string name="invalid_email">Invalid email address</string>
    <string name="invalid_password">Invalid password</string>
    <string name="check_internet">Check internet connectivity</string>
    <string name="Scanned_asset_not_found">No match found</string>
    <string name="could_not_fetch_assets">Could not fetch Assets</string>
    <string name="turn_on_wifi_or_mobile_data">Turn on wifi or Mobile Data</string>
    <string name="invalid_email_password">Invalid email or password</string>
    <string name="server_error">Server Error.</string>
    <string name="poor_internet">Wrong workspace or Poor connectivity</string>
    <string name="date">Date:</string>
    <string name="requested">REQUESTED</string>
    <string name="paused">PAUSED</string>
    <string name="cancelled">CANCELED</string>
    <string name="problem_colon">Problem:</string>
    <string name="solution_colon">Solution:</string>
    <string name="problem">Problem</string>
    <string name="solution">Solution</string>
    <string name="workorder_requests">Work Order Requests</string>
    <string name="spartacus_text">ID Spartacus:</string>
    <string name="something_wrong">Something went wrong</string>
    <string name="access_denied">Access denied</string>
    <string name="select_due_date_for_workorder">Select due date for workorder</string>
    <string name="select_due_date">Select due date</string>
    <string name="select_time">Select time</string>
    <string name="asset_star" translatable="false">Asset*</string>
    <string name="asset" translatable="false">Asset</string>
    <string name="asset_colon" translatable="false">Asset:</string>
    <string name="assets">Assets</string>
    <string name="time_star">Time*</string>
    <string name="employee_star">Employee*</string>
    <string name="field_required">Field required</string>
    <string name="clear">CLEAR</string>
    <string name="date_firstCap">Date</string>
    <string name="creation_date">Creation date</string>
    <string name="select_employ_caps">Select Employees</string>
    <string name="resp_employee">Responsible employee</string>
    <string name="select_employees">Select employees</string>
    <string name="select_employee">Select employee</string>
    <string name="select_resp_employ">Select responsible employee</string>
    <string name="select_category_caps">Select Category</string>
    <string name="select_categories">Select categories</string>
    <string name="team_star">Team*</string>
    <string name="team_firstCap">Team</string>
    <string name="select_teams">Select Teams</string>
    <string name="resp_team">Responsible team</string>
    <string name="select_resp_team">Select responsible team</string>
    <string name="select_range_caps">Select Range</string>
    <string name="SpareParts">Spare Parts:</string>
    <string name="select_spare_parts">Select spare parts</string>
    <string name="select_spare_part">Select spare part</string>
    <string name="select_contributors">Select contributors</string>
    <string name="select_contributor">Select contributor</string>
    <string name="next">NEXT</string>
    <string name="available">Available</string>
    <string name="check_quantity">Check quantity</string>
    <string name="quantity">Quantity</string>
    <string name="successfully_updated">Successfully updated</string>
    <string name="characters_only_1000">1000 characters only</string>
    <string name="select_end_date">Select End Date</string>
    <string name="select_end_time">Select_end_time</string>
    <string name="tag_cap">Tag</string>
    <string name="tags_cap">Tags</string>
    <string name="hint_select_tags">Select one or more tags</string>
    <string name="email" translatable="false">Email</string>
    <string name="password">Password</string>
    <string name="spare_parts">Spare parts</string>
    <string name="hint_select_spare_parts">Select one or more spare parts</string>
    <string name="spare_parts_used">Spare parts used</string>
    <string name="add_spare_part">Add spare part</string>
    <string name="forgot_password_question_mark">Forgot password?</string>
    <string name="status" translatable="false">status</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="dot_connectavo" translatable="false">.connectavo</string>
    <string name="asset_name_lead_level_asset" translatable="false">Asset name really long / child asset</string>
    <string name="work_order_assigned_to" translatable="false">Workorder Assigned to</string>
    <string name="documents_colon">Documents:</string>
    <string name="keep_track_of_workorders_and_performance">Intelligent maintenance made easy</string>
    <string name="enlargement_is_disabled">Enlargement is disabled</string>
    <string name="quantity_colon">Quantity:</string>
    <string name="location_colon">Location:</string>
    <string name="coming_soon">Coming soon...</string>
    <string name="sort_by">Sort by</string>
    <string name="apply">Apply</string>
    <string name="cancel">Cancel</string>
</resources>